--- a/gitconflictsextractor/.classpath
+++ b/gitconflictsextractor/.classpath
@@ -23,7 +23,7 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry exported="true" kind="con" path="GROOVY_DSL_SUPPORT"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/astfinder"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/fstmerge"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/MRFinder"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
