--- a/astfinder/bin/.gitignore
+++ b/astfinder/bin/.gitignore
@@ -1,2 +1,9 @@
 /ConflictsParser.class
 /CopyOfNaiveASTFlattener.class
+/MethodReferencesFinderAST$1.class
+/MethodReferencesFinderAST$2.class
+/MethodReferencesFinderAST$ErrorType.class
+/MethodReferencesFinderAST$ParserRunnable.class
+/MethodReferencesFinderAST.class
+/NaiveASTFlattenerKCOMPILATIOUNIT.class
+/OriginalNaiveASTFlattener.class
