--- a/gitconflictsextractor/pom.xml
+++ b/gitconflictsextractor/pom.xml
@@ -86,5 +86,11 @@
 			<artifactId>velocity</artifactId>
 			<version>1.7</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/commons-io/commons-io -->
+		<dependency>
+			<groupId>commons-io</groupId>
+			<artifactId>commons-io</artifactId>
+			<version>2.6</version>
+		</dependency> 
 	</dependencies>
 </project>
